# bluenote-desktop

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
bluenote-bluetooth/: Cargo.toml  package-lock.json  package.json
bluenote-bluetooth/npm/win32-arm64-msvc/: README.md  package.json
bluenote-bluetooth/npm/win32-x64-msvc/: README.md  package.json
bluenote-bluetooth/src/: error.rs  init.rs  lib.rs  scanner.rs  sync.rs
bluenote-bluetooth/src/init/: client.rs  server.rs
bluenote-bluetooth/src/sync/: async_reader.rs  async_writer.rs  client.rs  server.rs
docs/: protocol_v1.md  protocol_v2.md  protocol_v3.md
prisma/: schema.prisma
prisma/migrations/20230927113805_init/: migration.sql
prisma/migrations/20230927151454_init/: migration.sql
prisma/migrations/20231001131430_init/: migration.sql
prisma/migrations/20231004071651_init/: migration.sql
prisma/migrations/20231006072601_init/: migration.sql
scripts/: build.debug.mjs  build.main.debug.mjs  build.preload.debug.mjs
src/common/: note.ts  note_with_thread_name.ts  settings.ts  thread.ts
src/main/: main.ts  tsconfig.json
src/preload/: api.ts  bluetooth.ts  channel.ts  electron-api.ts  global.d.ts  preload.ts  settings.ts  tsconfig.json
src/renderer/: App.vue  index.html  postcss.config.js  reset.css  tsconfig.json
src/renderer-react/: package.json  postcss.config.js  tailwind.config.js
tests/main/: device_service.test.ts  helper.ts  jest.config.js  jest.setup.ts  note_service.test.ts  sync_service.test.ts  thread_service.test.ts  tsconfig.json
(+93 files in other folders)
