[package]
edition = "2021"
name = "bluenote-bluetooth"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["full"] }
windows = { version = "0.51.1", features = ["Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Devices_Bluetooth_Rfcomm", "Devices_Bluetooth_GenericAttributeProfile", "Foundation_Collections", "Foundation", "Storage_Streams", "Networking_Sockets", "Devices_Enumeration"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
